# py_horses_data_handler

./: .gitignore  README.md  pyproject.toml
py_horses_data_handler/: __init__.py  core.py  test_core.py
