[project]
name = "py-horses-data-handler"
version = "0.1.0"
description = "Handle the solution data provided by HORSES3D CFD solver."
authors = [
    {name = "Pablo Alcañiz", email = "alcaniz.pablo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_horses_data_handler"]

[tool.hatch.build.targets.sdist]
include = [
    "/py_horses_data_handler",
    "README.md",
    "LICENSE"
]

[dependency-groups]
dev = []
lint = [
    "pyrefly>=0.33.1",
]

